@@ -1,7 +1,7 @@
 Package: rcicr
 Type: Package
 Title: Reverse correlation image classification toolbox
-Version: 0.2.6
+Version: 0.3.0
 Date: 2014-12-18
 URL: http://ron.dotsch.org/rcicr
 Author: Ron Dotsch <rdotsch@gmail.com>
@@ -11,8 +11,8 @@ License: GPL-2
 Imports: matlab, aspace, tcltk, jpeg
 Repository: CRAN
 Repository/R-Forge/Project: rcicr
-Repository/R-Forge/Revision: 28
-Repository/R-Forge/DateTimeStamp: 2014-12-18 07:40:26
-Date/Publication: 2014-12-19 12:07:03
-Packaged: 2014-12-18 07:45:10 UTC; rforge
+Repository/R-Forge/Revision: 29
+Repository/R-Forge/DateTimeStamp: 2015-01-23 11:33:24
+Date/Publication: 2015-01-23 16:24:33
+Packaged: 2015-01-23 11:45:31 UTC; rforge
 NeedsCompilation: no
