@@ -1,16 +1,16 @@
-d13b36b8044b00aea5b122ce7e431756 *ChangeLog
-e0f067caab6223e9c634796d5b7ae57d *DESCRIPTION
+7fcb336aedcc30a3ff4eb4acb3f9d4ce *ChangeLog
+191b577f821a158ef3d8db4d16e23e71 *DESCRIPTION
 007a34bc6ee8a905227c72d26c3aed0e *NAMESPACE
-9157d1eea370a1d1ca5676e1f44b8fa7 *R/rcicr.R
-a79a9f37f724759e7377961dc1663d75 *R/rcicr_2IFC.R
+4cf12da661ef198dbd55c9b551d3ed0a *R/rcicr.R
+3463c23a4e16d6fbf36012d5d88d5a38 *R/rcicr_2IFC.R
 de9044933c3103527b0f1aa869ec9c28 *R/rcicr_simulations.R
 08e66b1164b2602fb56cdd38f146374e *inst/CITATION
 e464f07f1e060f83b96a73ff5a725b3f *man/autoscale.Rd
 03161c025eb79ec4483cc5d6523b4be0 *man/batchGenerateCI2IFC.Rd
-2ed675eb14a021d42259b48b05ab2996 *man/generateCI.Rd
+8e934a322de743c8dbf0feb57a318aa4 *man/generateCI.Rd
 b6db039a12d96f955caae286b62d6837 *man/generateCI2IFC.Rd
-f5d78e9a66c636347f1899e2ff32f6db *man/generateNoiseImage.Rd
-388fbb40baf56181d3157f9aa49f57ee *man/generateNoisePattern.Rd
+2a6e57ffcb1f91afa89a054699095019 *man/generateNoiseImage.Rd
+334ecdfc4831bf082a1b9bd830ae2d2d *man/generateNoisePattern.Rd
 87e59146681f1699aae1815071ded8d9 *man/generateSinusoid.Rd
 5601b017fed01ee93c6c71011042dad8 *man/generateStimuli2IFC.Rd
 4d521bd42de701309227086865fc4787 *man/rcicr-package.Rd
